--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 </head>
 
 <body>
+    <!-- container generale 800px  -->
     <div class="container">
         <h1>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+        <!-- box bianco con form -->
         <div class="box-white">
+            <!-- form -->
             <form action="#" method="get">
+                <!-- box flex nel form con 3 colonne -->
                 <div class="form-box">
                     <div class="col">
                         <label for="name">Nome Cognome</label>
@@ -32,13 +36,17 @@
                         </select>
                     </div>
                 </div>
-
+                <!-- /box flex nel form con 3 colonne -->
             </form>
+            <!-- /form -->
             <button id="btn-genera" class="btn" type="button">Genera</button>
             <button id="btn-annulla" class="btn" type="reset">Annulla</button>
         </div>
-
+        <!-- /box biano con form -->
+        <div class="box-white">
+        </div>
     </div>
+    <!-- /container generale 800px  -->
     <script src="js/main.js"></script>
 </body>
 
