fix bottoni , add controllo input, fix variabili

--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@
                         </select>
                     </div>
                 </div>
-                <!-- /box flex nel form con 3 colonne -->
+                <!-- /box flex nel form con 3 colonne --> 
+
+                <!-- Bottoni che genera e annulla la creazione del biglietto -->
+                <button id="btn-genera" class="btn" type="button">Genera</button>
+                <button id="btn-annulla" class="btn" type="reset">Annulla</button>
+                <!-- /Bottoni che genera e annulla la creazione del biglietto -->
             </form>
             <!-- /form -->
-            <button id="btn-genera" class="btn" type="button">Genera</button>
-            <button id="btn-annulla" class="btn" type="reset">Annulla</button>
+           
         </div>
         <!-- /box biano con form -->
 
